2006-04-21  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* dns.tcl: Fixed bug #1158037. We were using the query id to
	locate the DNS state token but this restricts us to 65535 queries
	as the value is packed into a short.

2006-04-20  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* dns.tcl: Applied patch from #1453327 by Segei Golovan to improve
	           support for TXT records.

2006-01-29  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* spf.test: Fixed use of duplicate test names.

2006-01-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* dns.test: More boilerplate simplified via use of test support.
	* ip.test:
	* ipMore.test:
	* spf.test:

2006-01-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* dns.test: Hooked into the new common test support code.
	* ip.test:
	* ipMore.test:
	* spf.test

2005-10-21  Andreas Kupries <andreask@activestate.com>

	* ipMore.tcl: Style cleanup. We need only one $Id expansion at
	  the top of the file, not for every command in it.

2005-10-18  Andreas Kupries <andreask@activestate.com>

	* ipMore.tcl (::ip::maskToInt): Fixed [SF Tcllib Bug 1323146],
	  using the patch supplied by Mikhail Teterin
	  <kot@users.sf.net>. One path through the code did not mask the
	  data down to 32bit.

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2005-10-04  Andreas Kupries <andreask@activestate.com>

	* ipMoreC.tcl: disabling the new critcl parts of ip for the
	  platforms it is known to not work for. A better solution will be
	  worked on after the release.

2005-09-30  Andreas Kupries <andreask@activestate.com>

	* ipMore.test:  Integrated Aamer Akhter's extended
	* ipMore.tcl:   conversion and manipulation commands
	* ipMoreC.tcl:  for ip-addresses and -masks. See the
	* msmgs/en.msg: [SF Tcllib Patch 1260196]. Extended the
	* ip.man:       documentation, testsuite, critcl setup.
